# samp-mongo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  samp-mongo.def  samp-mongo.inc  vcpkg.json
lib/samp-sdk/amx/: amxplugin.cpp
src/: main.cpp  natives.cpp  natives.h  worker.cpp  worker.h
